--- a/portfolio-frontend/app/globals.css
+++ b/portfolio-frontend/app/globals.css
@@ -1,2 +1,9 @@
 @import "tailwindcss";
 
+.page-title {
+    font-family: var(--font-geist-sans);
+    text-align: center;
+    font-size: 75px;
+    color: #0f0;  
+    font-family: 'Courier New', Courier, monospace;
+}
