--- a/portfolio-frontend/app/components/Home/home.css
+++ b/portfolio-frontend/app/components/Home/home.css
@@ -1,33 +1,36 @@
-@import './../../globals.css';
+@import "./../../globals.css";
 
 body {
   background-color: #000;
   color: #0f0;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-  h1 {
-    animation: typing 2s steps(22);
-    overflow: hidden;
-    white-space: nowrap;
-    border-right: 0.15em solid #0f0;
-    margin-bottom: 80px;
-    font-size: 50px;
-  }
-  
-  @keyframes typing {
-    from { width: 0; }
-    to { width: 100%; }
-  }
+h1 {
+  animation: typing 2s steps(22);
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 0.15em solid #0f0;
+  margin-bottom: 80px;
+  font-size: 50px;
+}
 
- .menu {
-    animation: fadeIn 2s forwards;
-    animation-delay: 2s; 
-    opacity: 0;
-    justify-content: space-between;
-  } 
-  
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+.menu {
+  animation: fadeIn 2s forwards;
+  animation-delay: 2s;
+  opacity: 0;
+  justify-content: space-between;
+}
