--- a/portfolio-frontend/app/contact/contact.css
+++ b/portfolio-frontend/app/contact/contact.css
@@ -1,73 +1,96 @@
-@import './../globals.css';
+@import "./../globals.css";
 
 body {
-    font-family: 'Courier New', Courier, monospace;
-  }
+  font-family: "Courier New", Courier, monospace;
+}
 
-  .columns-4{
-    display: flex;
-    justify-content: center;
-    gap: 50px; 
-    flex-wrap: wrap; 
-  }
+.columns-4 {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+  flex-wrap: wrap;
+}
 
-    .columns-4 div {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      width: 300px; 
-  }
-
+.columns-4 div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 300px;
+}
 
 .contact {
-    overflow: hidden;
-    white-space: nowrap;
-    border-right: 0.15em solid #0f0;
-    margin-bottom: 80px;
-    font-size: 24px;
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: 0.15em solid #0f0;
+  margin-bottom: 80px;
+  font-size: 24px;
 }
 
 .contact-linkedin {
-  animation: typingLinkedin 3s steps(9), blink 0.7s ; 
+  animation:
+    typingLinkedin 3s steps(9),
+    blink 0.7s;
 }
 
 @keyframes typingLinkedin {
-  from { width: 0; }
-  to { width: 9ch; }
+  from {
+    width: 0;
+  }
+  to {
+    width: 9ch;
+  }
 }
 
 .contact-github {
-  animation: typingGithub 3s steps(6), blink 0.7s ; 
+  animation:
+    typingGithub 3s steps(6),
+    blink 0.7s;
 }
 
 @keyframes typingGithub {
-  from { width: 0; }
-  to { width: 6ch; }
+  from {
+    width: 0;
+  }
+  to {
+    width: 6ch;
+  }
 }
 
 .contact-phone {
-  animation: typingPhone 3s steps(14), blink 0.7s ; 
+  animation:
+    typingPhone 3s steps(14),
+    blink 0.7s;
 }
 
 @keyframes typingPhone {
-  from { width: 0; }
-  to { width: 14ch; }
+  from {
+    width: 0;
+  }
+  to {
+    width: 14ch;
+  }
 }
 
 .contact-mail {
-  animation: typingMail 3s steps(24), blink 0.7s ; 
+  animation:
+    typingMail 3s steps(24),
+    blink 0.7s;
 }
 
 @keyframes typingMail {
-  from { width: 0; }
-  to { width: 24ch; }
+  from {
+    width: 0;
+  }
+  to {
+    width: 24ch;
+  }
 }
 
 .contact-icon {
   font-size: 150px;
-  color: #0f0;  
+  color: #0f0;
 }
 
 .contact-icon {
