[style] update style

--- a/portfolio-frontend/app/components/Banner/banner.css
+++ b/portfolio-frontend/app/components/Banner/banner.css
@@ -1,13 +1,25 @@
 @import "tailwindcss";
 
-.bg-banner {
-  background-image: url("./../../assets/images/banner.png");
-}
+/* .page-title {
+  font-family: var(--font-geist-sans);
+  text-align: center;
+  font-size: 75px;
+  color: black;
+  font-family: "Courier New", Courier, monospace;
+  background-color: #4fc96f;
+} */
 
 .page-title {
   font-family: var(--font-geist-sans);
   text-align: center;
   font-size: 75px;
-  color: #0f0;
   font-family: "Courier New", Courier, monospace;
+  background: linear-gradient(to right, #a6e5b6, #048609);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  background-size: auto;
+  background-repeat: no-repeat;
+  display: inline-block;
+  justify-content: center;
 }
