--- a/portfolio-frontend/app/components/Home/home.css
+++ b/portfolio-frontend/app/components/Home/home.css
@@ -2,7 +2,7 @@
 
 body {
   background-color: #000;
-  color: #0f0;
+  color: #4fc96f;
   font-family: "Courier New", Courier, monospace;
   height: 100vh;
   display: flex;
@@ -14,7 +14,7 @@ h1 {
   animation: typing 2s steps(22);
   overflow: hidden;
   white-space: nowrap;
-  border-right: 0.15em solid #0f0;
+  border-right: 0.15em solid #4fc96f;
   margin-bottom: 80px;
   font-size: 50px;
 }
