--- a/portfolio-frontend/app/components/Menu/menu.css
+++ b/portfolio-frontend/app/components/Menu/menu.css
@@ -7,7 +7,7 @@ body {
 
 .menu {
   background-color: #000;
-  color: #0f0;
+  color: #4fc96f;
   padding: 10px 20px;
   font-family: "Courier New", Courier, monospace;
   display: flex;
