--- a/portfolio-frontend/app/contact/contact.css
+++ b/portfolio-frontend/app/contact/contact.css
@@ -23,7 +23,7 @@ body {
 .contact {
   overflow: hidden;
   white-space: nowrap;
-  border-right: 0.15em solid #0f0;
+  border-right: 0.15em solid #4fc96f;
   margin-bottom: 80px;
   font-size: 24px;
 }
@@ -90,7 +90,7 @@ body {
 
 .contact-icon {
   font-size: 150px;
-  color: #0f0;
+  color: #4fc96f;
 }
 
 .contact-icon {
